Revision history for eigenstates

{{$NEXT}}

0.0.11  2024-06-24T20:53:03+02:00
    - Modernize test file extension
    - Update copyright year
    - Add sponsor button

0.0.10  2022-07-29T20:45:40+02:00
    - Fix situation caused by a nqp::list (akd BOOTArray) as the storage
      of the eigenstates in a Junction, rather than an IterationBuffer.
      Spotted by Wenzel P.P. Peppmeyer++
    - Update email address, copyright year
    - Add sponsor link

0.0.9  2021-12-02T21:05:30+01:00
    - Remove custom labels from dist.ini

0.0.8  2021-11-07T11:52:47+01:00
    - Get rid of dummy class info to appease mi6

0.0.7  2021-09-10T12:00:27+02:00
    - Another attempt at fixing an upload

0.0.6  2021-08-26T18:07:22.622835+02:00
    - Attempt to set version with mi6

0.0.5  2021-08-26T10:18:15.864197+02:00
    - Move to fez

0.0.4  2020-11-29T13:53:48+01:00
    - Add Technical Background section

0.0.3  2020-11-26T13:16:15+01:00
    - Update META6.json, seems App::Mi6 missed it :-(

0.0.2  2020-11-26T12:57:24+01:00
    - Need to de-containerize, spotted by Wenzel P.P. Peppmeyer++

0.0.1  2020-10-12T15:19:10+02:00
    - Initial version