@@ -1,4 +1,4 @@
-[![Actions Status](https://github.com/lizmat/eigenstates/workflows/test/badge.svg)](https://github.com/lizmat/eigenstates/actions)
+[![Actions Status](https://github.com/lizmat/eigenstates/actions/workflows/linux.yml/badge.svg)](https://github.com/lizmat/eigenstates/actions) [![Actions Status](https://github.com/lizmat/eigenstates/actions/workflows/macos.yml/badge.svg)](https://github.com/lizmat/eigenstates/actions) [![Actions Status](https://github.com/lizmat/eigenstates/actions/workflows/windows.yml/badge.svg)](https://github.com/lizmat/eigenstates/actions)
 
 NAME
 ====
@@ -68,7 +68,7 @@ If you like this module, or what I’m doing more generally, committing to a [sm
 COPYRIGHT AND LICENSE
 =====================
 
-Copyright 2020, 2021, 2022, 2024 Elizabeth Mattijsen
+Copyright 2020, 2021, 2022, 2024, 2025 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
